get dailies docs added
